# mcp-ytdlp

./: ._example_urls.txt  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  example_urls.txt  main.py  pyproject.toml  requirements.txt  test_video_metadata.sh
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml
openspec/: config.yaml
openspec/changes/add-media-sidecar/: README_TEMPLATE.md  design.md  docker-compose.yaml  proposal.md  tasks.md
openspec/changes/add-media-sidecar/specs/media-processing/: spec.md
openspec/changes/add-output-directory-parameter/: proposal.md  tasks.md
openspec/changes/add-output-directory-parameter/specs/media-processing/: spec.md
src/mcp_ytdlp/: __init__.py  __main__.py  auth.py  config.py  server.py
tests/: conftest.py  test_config.py  test_download_filename.py  test_validators.py
