[project]
name = "mcp-ytdlp"
version = "0.2.22"
description = "FastMCP server for downloading and converting videos via yt-dlp"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CaseyRo"}]
keywords = ["mcp", "fastmcp", "yt-dlp", "youtube", "video", "download"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "fastmcp>=3.4.3,<4.0.0",
  "yt-dlp>=2026.7.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  # Security floors (transitive deps of fastmcp; pinned to address CVEs)
  "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
  "python-multipart>=0.0.27",  # GHSA: DoS via unbounded multipart headers
]

[project.urls]
"Homepage" = "https://github.com/CaseyRo/mcp-ytdlp"
"Bug Tracker" = "https://github.com/CaseyRo/mcp-ytdlp/issues"

[project.scripts]
mcp-ytdlp = "mcp_ytdlp.server:main"

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ytdlp"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
